--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://artmarydotir.github.io/litti_02",
+  "homepage": "https://artmarydotir.github.io/litti02/",
   "name": "gitcard",
   "version": "0.1.0",
   "private": true,
